[package]
name = "lau-sheaf-spectrum"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-sheaf-spectrum"
description = "Spectral sheaf theory: sheaf Laplacians, Hodge decomposition, sheaf diffusion, connection Laplacians, sheaf neural networks, synchronization, and persistent sheaf cohomology"
readme = "README.md"
keywords = ["sheaf", "spectral", "graph", "cohomology", "laplacian"]
categories = ["mathematics", "science"]

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
approx = "0.5"
